--- a/public/css/now-tv.css
+++ b/public/css/now-tv.css
@@ -109,6 +109,7 @@ body, html {
 	border-radius: 5px;
 	border: none;
 	background: #e5e5e5;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.25)inset;
 	transition: all .2s 0s ease-in-out;
 }
 
