Converted duration property value from seconds to minutes

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -26,7 +26,7 @@
 				<td>{{movie.title}}</td>
 				<td>{{movie.year}}</td>
 				<td>{{movie.rating}}</td>
-				<td>{{movie.duration}}</td>
+				<td>{{movie.duration}} min</td>
 				<td>
 					<span ng-repeat="actor in movie.actors.list">{{actor.name}}, </span>
 				</td>
