--- a/public/css/now-tv.css
+++ b/public/css/now-tv.css
@@ -1,12 +1,14 @@
 body, html {
+	-webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: subpixel-antialiased;
 	margin: 0;
 	padding: 0;
 	min-height: 100%;
 	height: 100%;
 	font-size: 14px;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.5;
-	color: #444;
+	font-family: 'Helvetica Neue', Helvetica,Arial,sans-serif;
+	color: #424242;
 }
 
 *, *:focus, *:active {
@@ -20,6 +22,8 @@ body, html {
 .nt-wrapper {
 	width: 70%;
 	margin: 0 auto;
+	max-width: 1366px;
+	min-width: 320px;
 }
 
 .nt-row {
